syntax = "proto3";

option csharp_namespace = "Microservice.UserManager";

package userManager;

service UserManager {
  rpc Register (UserProto) returns (UserReply);
  rpc Login (UserProto) returns (UserReply);
  rpc CheckMate(Check) returns (Mate);
}

message Check {
	string some = 1;
}

message Mate {
	string hello = 1;
}

message UserProto {
	string email = 1;
	string password = 2;
	string name = 3;
}

message UserReply {
	bool isException = 1;
	string message = 2;
	int32 expiresIn = 3;
}
