syntax = "proto3";

option csharp_namespace = "Microservice.WebClient.Protos";

package digitalModelProto;

service DigitalModelService {
  rpc PushDigitalModels (ModelRequest) returns (ModelReply);
  rpc GetDigitalModels (GetModelsRequest) returns (stream GetModelsReply);
}

message ModelRequest {
  string name = 1;
  string userId = 2;
  int32 productId = 3; 
}

message ModelReply {
   string status = 1;
}

message GetModelsRequest {
	string userId = 1;
}

message GetModelsReply {
   repeated ModelProto models = 1;
}

message ModelProto {
  int32 id = 1;
  string name = 2;
  string userId = 3;
  string productName = 4;
  string productCode = 5;
  string productCurrentPrice = 6;
  int32 mapId = 7;
}
